--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 08:05:04 2018</p>
+         Last Run: Sun Jul 22 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>47</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>47</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>48</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NE</td>
-                        <td>45</td>
+                        <td>NNE</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NE</td>
-                        <td>38</td>
+                        <td>NNE</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
+                 "2",
+                 "2",
                  "3"
                ]
              },
@@ -182,7 +182,7 @@
                "data":[
                  "47",
                  "48",
-                 "57"
+                 "56"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "45",
-                 "38"
+                 "49",
+                 "42",
+                 "35"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 08:05:04 2018</p>
+         Last Run: Sun Jul 22 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -250,7 +250,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -258,9 +258,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>22</td>
                      </tr>
@@ -270,7 +270,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -282,7 +282,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>20</td>
-                        <td>64</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
@@ -416,9 +416,9 @@
                "data":[
                  "41",
                  "42",
-                 "45",
-                 "53",
-                 "64"
+                 "44",
+                 "52",
+                 "63"
                ]
              },
              {
@@ -426,8 +426,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "37",
+                 "45",
+                 "36",
                  "22",
                  "12",
                  "11"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 08:05:04 2018</p>
+         Last Run: Sun Jul 22 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -469,10 +469,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>4</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -499,7 +499,7 @@
                         <td>24</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -508,9 +508,9 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNE</td>
                         <td>3</td>
                      </tr>
@@ -519,7 +519,7 @@
                         <td>Clear</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>19</td>
+                        <td>15</td>
                         <td>22</td>
                         <td>6</td>
                         <td>11</td>
@@ -570,7 +570,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
+                 "24",
                  "26",
                  "28",
                  "29",
@@ -583,7 +583,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
+                 "24",
                  "26",
                  "28",
                  "29",
@@ -644,7 +644,7 @@
                  "1",
                  "1",
                  "0",
-                 "19"
+                 "15"
                ]
              },
              {
@@ -652,10 +652,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "33",
                  "28",
                  "24",
-                 "23",
+                 "22",
                  "22"
                ]
              },
