--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 10:05:04 2018</p>
+         Last Run: Sun Jul 22 11:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>2</td>
-                        <td>46</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>52</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>3</td>
-                        <td>48</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NE</td>
-                        <td>46</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>38</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "44",
                  "46",
-                 "48",
-                 "55"
+                 "54"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "46",
-                 "38"
+                 "57",
+                 "50",
+                 "42"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 10:05:04 2018</p>
+         Last Run: Sun Jul 22 11:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,7 +234,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -250,7 +250,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -267,8 +267,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>3</td>
                         <td>53</td>
                         <td>0</td>
@@ -335,7 +335,7 @@
                  "21",
                  "21",
                  "20",
-                 "17",
+                 "18",
                  "15"
                ]
              },
@@ -348,7 +348,7 @@
                  "21",
                  "21",
                  "20",
-                 "17",
+                 "18",
                  "15"
                ]
              }
@@ -414,7 +414,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
+                 "42",
                  "42",
                  "45",
                  "53",
@@ -427,7 +427,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "46",
-                 "37",
+                 "38",
                  "22",
                  "12",
                  "11"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 10:05:04 2018</p>
+         Last Run: Sun Jul 22 11:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,9 +472,9 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
@@ -484,9 +484,9 @@
                         <td>26</td>
                         <td>26</td>
                         <td>1</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
                         <td>2</td>
                      </tr>
@@ -496,10 +496,10 @@
                         <td>28</td>
                         <td>28</td>
                         <td>1</td>
-                        <td>24</td>
+                        <td>25</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>WNW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -508,9 +508,9 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>23</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNE</td>
                         <td>3</td>
                      </tr>
@@ -519,8 +519,8 @@
                         <td>Clear</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>15</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>6</td>
                         <td>11</td>
                         <td>N</td>
@@ -644,7 +644,7 @@
                  "1",
                  "1",
                  "0",
-                 "15"
+                 "23"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
-                 "28",
-                 "24",
-                 "22",
-                 "22"
+                 "34",
+                 "29",
+                 "25",
+                 "23",
+                 "23"
                ]
              },
              {
