--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 11:05:09 2018</p>
+         Last Run: Sun Jul 22 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>44</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>57</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>NE</td>
-                        <td>50</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>54</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NE</td>
-                        <td>42</td>
+                        <td>NNE</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,7 +170,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "3",
                  "3",
                  "3"
                ]
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "50",
-                 "42"
+                 "63",
+                 "56",
+                 "46"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 11:05:09 2018</p>
+         Last Run: Sun Jul 22 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>46</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -250,7 +250,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -258,9 +258,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>22</td>
                      </tr>
@@ -270,7 +270,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -281,7 +281,7 @@
                         <td>Clear</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
@@ -406,7 +406,7 @@
                  "0",
                  "0",
                  "3",
-                 "19"
+                 "21"
                ]
              },
              {
@@ -414,10 +414,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "41",
                  "42",
-                 "42",
-                 "45",
-                 "53",
+                 "44",
+                 "52",
                  "63"
                ]
              },
@@ -426,8 +426,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "38",
+                 "44",
+                 "35",
                  "22",
                  "12",
                  "11"
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 11:05:09 2018</p>
+         Last Run: Sun Jul 22 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -469,8 +469,8 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
                         <td>34</td>
                         <td>4</td>
@@ -481,10 +481,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>1</td>
-                        <td>29</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>2</td>
+                        <td>28</td>
                         <td>5</td>
                         <td>8</td>
                         <td>W</td>
@@ -495,11 +495,11 @@
                         <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>25</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -519,8 +519,8 @@
                         <td>Clear</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>19</td>
+                        <td>22</td>
                         <td>6</td>
                         <td>11</td>
                         <td>N</td>
@@ -570,8 +570,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
-                 "26",
+                 "25",
+                 "27",
                  "28",
                  "29",
                  "29"
@@ -583,8 +583,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
-                 "26",
+                 "25",
+                 "27",
                  "28",
                  "29",
                  "29"
@@ -641,10 +641,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "0",
-                 "23"
+                 "19"
                ]
              },
              {
@@ -653,10 +653,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "29",
+                 "28",
                  "25",
                  "23",
-                 "23"
+                 "22"
                ]
              },
              {
